--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,47 @@
 future
 emoji
+lxml
 beautifulsoup4
-telegraph
 requests
+python-telegram-bot==12.8
 sqlalchemy==1.3.23
-tswift
-coffeehouse
-python-telegram-bot==11.1.0
-numpy
-urbandict
-pyowm
-wikipedia
-kbbi
-feedparser
-gtts
-alphabet_detector
 psycopg2-binary
 feedparser
-tswift
 pynewtonmath
-#memes vvv
 spongemock
 zalgo-text
 geopy
 nltk
 psutil
-bleach
 aiohttp>=2.2.5
 Pillow>=4.2.0
 CurrencyConverter
-#translator
-googletrans
+#googletrans
+google_trans_new
 jikanpy
 speedtest-cli
-pytz
-parsel
-hurry.filesize
+coffeehouse
+regex
+bleach
+git+https://github.com/starry69/python-markdown2.git
+wikipedia
+telethon
 spamwatch
+alphabet_detector
+pyrate-limiter
+cachetools
+ujson
+pretty_errors
+TgCrypto
+Pyrogram
+youtube-dl
+youtube_search
+requests
+asyncio
+dateparser==1.0.0
+pymongo==3.11.0
+dnspython
+secureme
+apscheduler
+emoji-country-flag
+countryinfo
