--- a/requirements.txt
+++ b/requirements.txt
@@ -45,3 +45,18 @@ secureme
 apscheduler
 emoji-country-flag
 countryinfo
+tswift
+￼coffeehouse
+￼python-telegram-bot==11.1.0
+￼numpy
+￼urbandict
+￼pyowm
+￼wikipedia
+￼kbbi
+￼feedparser
+￼gtts
+￼alphabet_detector
+bleach
+pytz
+￼parsel
+￼hurry.filesize
